<resources>
    <string name="app_name">aafont</string>
    <string name="text_aafont">啊啊字库</string>
    <string name="slip">跳  过</string>
    <string name="text_store">商城</string>
    <string name="hint_username">请输入用户名或手机号</string>
    <string name="hint_password">请输入六位数密码</string>
    <string name="text_rigister">注册账户</string>
    <string name="btn_login">登陆</string>
    <string name="text_other_account">通过第三方应用账号登陆</string>
    <string name="text_get_pwd_back">忘记密码？</string>
    <string name="hint_name">请输入昵称</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_verify_code">请输入验证码</string>
    <string name="hint_set_pwd">请输入6~20位密码</string>
    <string name="text_get_verify_code">发送验证码</string>
    <string name="action_next_step">下一步</string>
    <string name="hint_reset_pwd_email">请输入登录邮箱</string>
    <string name="hint_set_password">请输入密码</string>
    <string name="hint_again_password">请确认密码</string>
    <string name="hint_old_password">请输入旧密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_new_again_password">请确认新密码</string>
    <string name="btn_reset_pwd">确定</string>
    <string name="notice_title">消息列表</string>
    <string name="me_title">个人主页</string>
    <string name="follow">关注</string>
    <string name="follow_yet">已关注</string>
    <string name="fans">粉丝</string>
    <string name="product">作品</string>
    <string name="setting_title">设置</string>
    <string name="setting_user_title">编辑个人信息</string>
    <string name="push_setting_title">推送通知设置</string>
    <string name="keep_camera_setting">保留相机预设</string>
    <string name="keep_water_mark">保留水印</string>
    <string name="change_passwd">修改密码</string>
    <string name="push_notice">推送通知</string>
    <string name="clear_cache">清除缓存</string>
    <string name="business_cooperation">商务合作</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="give_star">给一个评分</string>
    <string name="finish_setting">完成设置</string>
    <string name="logout">退出登录</string>
    <string name="version_info">版本信息：</string>
    <string name="push_setting">推送通知</string>
    <string name="private_notice">私信通知</string>
    <string name="everyone">所有人</string>
    <string name="my_follow">我关注的人</string>
    <string name="close">关闭</string>
    <string name="like_notice">获赞通知</string>
    <string name="comment_notice">评论通知</string>
    <string name="at_notice">提到我</string>
    <string name="fans_notice">新粉丝通知</string>
    <string name="hint_feedback">请输入您的意见......</string>
    <string name="commit">确认提交</string>
    <string name="select_album">选择相册</string>
    <string name="press_next">下一步</string>
    <string name="save_pic">保存图片</string>
    <string name="publish_picture">发布作品</string>
    <string name="label_text">标签</string>
    <string name="sync_to">同步到</string>
    <string name="only_self">仅自己可见</string>
    <string name="to_bottom">已经到底啦！</string>
    <string name="to_find_new">去发现新鲜内容 》</string>
    <string name="like_count">%d个赞</string>
    <string name="permission_notice">需要您的权限许可才能够运行</string>
    <string name="camera_error">此设备不支持Camera2 API</string>
    <string name="camera_permission_notice">需要摄像权限许可才能够运行</string>
    <string name="write_permission_notice">需要存储写入权限许可才能够运行</string>
    <string name="take_pic">拍照</string>
    <string name="take_video">视频</string>
    <string name="take_script">手迹</string>
    <string name="take_script_notice">为了保证手迹的质量，请将镜头放平，在光线明亮下进行拍摄。</string>
    <string name="size_ratio_9_16">9:16</string>
    <string name="size_ratio_1_1">1:1</string>
    <string name="item_store">商店</string>
    <string name="item_edit_mask_none">无滤镜</string>
    <string name="item_edit_mask_edit">编辑</string>
    <string name="go_to_store">去主题商店下载</string>
    <string name="save_success">保存成功</string>
    <string name="download">下载</string>
    <string name="search">搜索</string>
    <string name="hot_font">热门字体</string>
    <string name="hot_card">热门字卡</string>
    <string name="hot_filter">热门滤镜</string>
    <string name="hot_bg">热门模板</string>
    <string name="enter_area">进入专区</string>
    <string name="font_area">字体专区</string>
    <string name="filter_area">滤镜专区</string>
    <string name="card_area">字卡专区</string>
    <string name="bg_area">模板专区</string>
    <string name="hot_users">热门用户榜</string>
    <string name="wealcome_user">最受欢迎的用户</string>
    <string name="best_user">本周优秀创造者</string>
    <string name="known_users">认识的人</string>
    <string name="official_accounts">官方账号</string>
    <string name="check_all">查看全部</string>
    <string name="contact_friends">通讯录好友</string>
    <string name="weibo_friends">微博好友</string>
    <string name="official_account">Aa Font字体设计师</string>
    <string name="recommend_users">推荐用户</string>
    <string name="contact_name">通讯录名称：%1$s</string>
    <string name="comment_hint">请输入评论内容</string>
    <string name="comment_bt">发布</string>
    <string name="speak_browsing">切换浏览模式</string>
    <string name="speak_push">上传我的字体</string>
    <string name="speak_creat">创造专属字体</string>
    <string name="hint_search_shop">搜索创意商品</string>
    <string name="hint_search_attention">搜索用户名或者关键字</string>
    <string name="history_search">历史搜索</string>
    <string name="clear_history_search">清除历史搜索记录</string>
    <string name="search_result">搜索发现</string>
</resources>
