<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_reset_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/resetPwd_mobile_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/resetPwd_mobile_edt"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/resetPwd_get_code_btn"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_below="@id/resetPwd_mobile_edt"
            android:layout_alignRight="@id/resetPwd_mobile_edt"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/text_get_verify_code"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/resetPwd_code_edt"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/resetPwd_mobile_edt"
            android:layout_alignTop="@id/resetPwd_get_code_btn"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/resetPwd_get_code_btn"
            android:hint="@string/hint_verify_code"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/resetPwd_set_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/resetPwd_code_edt"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_set_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:minLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/resetPwd_again_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/resetPwd_set_password"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_again_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:minLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/resetPws_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPwd_again_password"
        android:layout_margin="24dp"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn_reset_pwd"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
