<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="2.33dp"
        android:layout_marginStart="9dp"
        android:src="@drawable/ic_back"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo_icon"
        android:layout_width="133.34dp"
        android:layout_height="133.34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13.34dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_splash_icon" />

    <LinearLayout
        android:layout_below="@+id/logo_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25.67dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_register_name"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:hint="@string/hint_name"
            android:maxLength="20"
            android:singleLine="true"
            android:background="@drawable/bg_search"
            android:paddingStart="18dp"
            android:textColor="#666666"
            android:textSize="10sp"
            android:textColorHint="#CCCCCC" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_register_mobile"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="9.67dp"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:background="@drawable/bg_search"
            android:paddingStart="18dp"
            android:textColor="#666666"
            android:textSize="10sp"
            android:textColorHint="#CCCCCC" />

        <FrameLayout
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="10.67dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_register_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_verify_code"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:background="@drawable/bg_search"
                android:paddingStart="18dp"
                android:textColor="#666666"
                android:textSize="10sp"
                android:textColorHint="#CCCCCC" />
            <View
                android:layout_width="0.34dp"
                android:layout_height="22dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="80.34dp"
                android:background="#4ECCCCCC" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_get_rerify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="20.34dp"
                android:text="@string/text_get_verify_code"
                android:textColor="#7ECEF4"
                android:textSize="10sp" />
        </FrameLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_register_set_pwd"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_set_pwd"
            android:maxLength="20"
            android:singleLine="true"
            android:background="@drawable/bg_search"
            android:paddingStart="18dp"
            android:textColor="#666666"
            android:textSize="10sp"
            android:textColorHint="#CCCCCC" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register_next_step"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_login_btn"
            android:text="@string/action_next_step"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

</RelativeLayout>
