<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="2.33dp"
        android:layout_marginStart="9dp"
        android:src="@drawable/ic_back"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo_icon"
        android:layout_width="133.34dp"
        android:layout_height="133.34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13.34dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_splash_icon" />

    <LinearLayout
        android:layout_below="@+id/logo_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25.67dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/resetPwd_old_password"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="9.67dp"
            android:hint="@string/hint_old_password"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:background="@drawable/bg_search"
            android:paddingStart="18dp"
            android:textColor="#666666"
            android:textSize="10sp"
            android:textColorHint="#CCCCCC" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/resetPwd_set_password"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_new_password"
            android:maxLength="20"
            android:singleLine="true"
            android:background="@drawable/bg_search"
            android:paddingStart="18dp"
            android:textColor="#666666"
            android:textSize="10sp"
            android:textColorHint="#CCCCCC" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/resetPwd_again_password"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_new_again_password"
            android:maxLength="20"
            android:singleLine="true"
            android:background="@drawable/bg_search"
            android:paddingStart="18dp"
            android:textColor="#666666"
            android:textSize="10sp"
            android:textColorHint="#CCCCCC" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/resetPws_sure"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_login_btn"
            android:text="@string/btn_reset_pwd"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

</RelativeLayout>
