<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--标题栏-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/back"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_search_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            app:layout_constraintLeft_toRightOf="@+id/iv_back"
            app:layout_constraintRight_toLeftOf="@+id/iv_search">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_query"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_search_attention"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textSize="14sp"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_clear_search"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/delete"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/search"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <!--历史搜索-->
    <LinearLayout
        android:id="@+id/search_reasult_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
        android:visibility="gone">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_search_reasult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/search_result"
                android:textColor="#383838"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </android.support.constraint.ConstraintLayout>

        <com.hanmei.aafont.ui.widget.TagFlowLayout
            android:id="@+id/fl_search_reasult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:is_limit="true"
            app:limit_line_count="3"
            app:max_select="1">
        </com.hanmei.aafont.ui.widget.TagFlowLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_arrow_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:visibility="gone"/>
    </LinearLayout>

    <!--历史搜索-->
    <LinearLayout
        android:id="@+id/ll_history_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_history_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/history_search"
                android:textColor="#383838"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/clear_all_records"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/delete_history"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <com.hanmei.aafont.ui.widget.TagFlowLayout
            android:id="@+id/fl_search_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:is_limit="true"
            app:limit_line_count="3"
            app:max_select="1">
        </com.hanmei.aafont.ui.widget.TagFlowLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>